# safegi

./: .gitignore  README.md
src/: CMakeLists.txt  cmake-clear.sh  cmake-mk.sh  cmake-msvs10.bat  cmake-xcode.sh
src/apps/tgl/: CMakeLists.txt  gl_renderer.cpp  gl_renderer.h  main.cpp  shader_src.cpp  shader_src.h
src/apps/tray/: CMakeLists.txt  main.cpp
src/apps/ugl/: CMakeLists.txt  gl_renderer.cpp  gl_renderer.h  main.cpp  shader_src.cpp
src/apps/uray/: CMakeLists.txt  main.cpp
src/libs/gi_aux/: CMakeLists.txt  bunny.cpp  fileio_t.h  fileio_u.h  test_scene_t.h  test_scene_u.h  timer.h
src/libs/sparser/: CMakeLists.txt  context.cpp  context.h  parser.hpp  parser.y  scanner.cpp  scanner.l  type_checker.h
src/libs/sparser/tools/: FindBISON.cmake  bison.bat
src/libs/t/safegi/: CMakeLists.txt  brdf.h  common.h  dimensions.h  direct.h  lens.h  m_spectrum.h  m_units.h  mesh.h  safe_gl.h  scene.h  shape.h  spaces.h  tracer.h  tracerutils.h  type_trait.h  xform.h
src/libs/t/sparser/: CMakeLists.txt  aux_data.cpp  aux_data.h  context.h  parser.cpp  predef_symbols.h  type_checker.cpp  unistd.h
src/libs/t/sparser/tools/: FindFLEX.cmake
src/libs/tsafegi/: bbox.h  brdf.h  image.h  linalg.h  m_geom.h  m_real.h  m_sampling.h  mesh.h  path.h  real.h  safe_gl.h  shape.h  source.h  tracerutils.h  xform.h
src/libs/u/safegi/: bbox.h  brdf.h  mesh.h  path.h  real.h  safe_gl.h  scene.h  shape.h  source.h  tracer.h  tracerutils.h  type_trait.h  u_sampling.h  xform.h
src/libs/usafegi/: CMakeLists.txt  brdf.h  common.h  direct.h  lens.h  mesh.h  safe_gl.h  shape.h  std.h  tracerutils.h  u_geom.h  u_spectrum.h  u_units.h  xform.h
